@@ -1,5 +1,5 @@
 ## HiC-Pro
-## Copyleft 2015 Institut Curie
+## Copyleft 2015,2016 Institut Curie
 ## Author(s): Nicolas Servant
 ## Contact: nicolas.servant@curie.fr
 ## This software is distributed without any guarantee under the terms of the GNU General
@@ -8,37 +8,36 @@
 ## DO NOT EDIT THE REST OF THIS FILE!!
 
 MK_PATH = $(shell dirname $(abspath $(lastword $(MAKEFILE_LIST))))
-VNUM = $(shell $(MK_PATH)/bin/HiC-Pro --version | cut -d " " -f 3)
 
 SCRIPTS=$(MK_PATH)/scripts
 SOURCES=$(SCRIPTS)/src
+CONFIGURE_OUT=$(wildcard ./config-system.txt)
+CONFIG_SYS=$(wildcard ./config-install.txt)
 
-all : install
 
-install : checkdep mapbuilder readstrimming iced cp
-
+install : config_check mapbuilder readstrimming iced cp
 
 ######################################
 ## Config file
 ##
 ######################################
 config_check:
-ifndef CONFIG_SYS
-	$(error CONFIG_SYS is not defined. Please run 'make CONFIG_SYS=config-install.txt install')
-else		
-include $(CONFIG_SYS)
+ifneq ("$(CONFIGURE_OUT)","")
+include $(CONFIGURE_OUT)
+else
+	$(error config-system.txt file not found. Please run 'make configure' first)
 endif
-ifndef PREFIX
-PREFIX = /local/bin/
-endif
-
 
 ######################################
-## Dependencies
+## Configure
 ##
 ######################################
-checkdep: config_check
-	./scripts/install/install_dependencies.sh -c $(CONFIG_SYS) -o  $(realpath $(PREFIX))/HiC-Pro_$(VNUM)
+configure:
+ifneq ("$(CONFIG_SYS)","")
+	make -f ./scripts/install/Makefile CONFIG_SYS=$(CONFIG_SYS)
+else
+	$(error config-install.txt file not found !)
+endif
 
 ######################################
 ## Compile
@@ -54,8 +53,10 @@ readstrimming: $(SOURCES)/cutsite_trimming.cpp
 
 ## Build Python lib
 iced: $(SOURCES)/ice_mod
-	(cp $(SOURCES)/ice_mod/iced/scripts/ice ${SCRIPTS}; cd $(SOURCES)/ice_mod/; python setup.py install --user;)
+	(cp $(SOURCES)/ice_mod/iced/scripts/ice ${SCRIPTS}; cd $(SOURCES)/ice_mod/; ${PYTHON_PATH}/python setup.py install --user;)
 
+test: config_check
+	@echo ${PYTHON_PATH}
 
 ######################################
 ## Create installed version
@@ -63,8 +64,8 @@ iced: $(SOURCES)/ice_mod
 ######################################
 
 cp:
-ifneq ($(realpath $(MK_PATH)), $(realpath $(PREFIX))/HiC-Pro_$(VNUM))
-	cp -Ri $(MK_PATH) $(PREFIX)/HiC-Pro_$(VNUM)
+ifneq ($(realpath $(MK_PATH)), $(realpath $(INSTALL_PATH)))
+	cp -Ri $(MK_PATH) $(INSTALL_PATH)
 endif
-	@echo "Install HiC-Pro in $(realpath $(PREFIX))/HiC-Pro_$(VNUM) ..."
+	@echo "HiC-Pro installed in $(realpath $(INSTALL_PATH)) !"
 
